k8s/kubernetes/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
  - port: 8001
    targetPort: 8001
  selector:
    app: backend
