k8s/kubernetes/ml-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ml
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: ml
