k8s/kubernetes/ingress-backend.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-api-backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: letsencrypt-prod  # Cert-manager annotation
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - finsights.proddeploy.xyz
    secretName: finsights-prod-tls  # Secret to store SSL certificate
  rules:
  - host: finsights.proddeploy.xyz
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend
            port:
              number: 8001
