k8s/kubernetes/ingress-frontend.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod  # Cert-manager annotation
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - finsights.proddeploy.xyz
    secretName: finsights-prod-tls  # Secret to store SSL certificate
  rules:
  - host: finsights.proddeploy.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 5000
